pkg/validator/runtime/kubernetes/testdata/defaulting/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d
spec:
  selector:
    matchLabels:
      app: d
  strategy:
    type: ""
  template:
    metadata:
      labels:
        app: d
    spec:
      containers:
        - name: c
          image: nginx:1.25
