pkg/validator/runtime/kubernetes/testdata/defaulting/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: x
spec:
  selector:
    matchLabels:
      app: x
  updateStrategy:
    type: ""
  template:
    metadata:
      labels:
        app: x
    spec:
      containers:
        - name: c
          image: nginx:1.25
