pkg/validator/runtime/kubernetes/testdata/defaulting/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
spec:
  podSelector: {}
  ingress:
    - ports:
        - port: 80
          protocol: ""
