pkg/validator/runtime/kubernetes/testdata/defaulting/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: p
spec:
  restartPolicy: ""
  dnsPolicy: ""
  schedulerName: ""
  serviceAccountName: ""
  containers:
    - name: c
      image: nginx:1.25
      imagePullPolicy: ""
      terminationMessagePath: ""
      terminationMessagePolicy: ""
      ports:
        - containerPort: 80
          protocol: ""
