pkg/validator/runtime/kubernetes/testdata/defaulting/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v
spec:
  type: ""
  sessionAffinity: ""
  externalTrafficPolicy: ""
  internalTrafficPolicy: ""
  ports:
    - port: 80
      protocol: ""
